Applied the icalendar_roadmap_bug_r5887.patch from ticket #5143, contributed by Justin Francis. In addition, I added a call to `apply_ticket_permissions` to restrict the list of tickets that can actually be viewed by the user.
I also took this opportunity to add Justin to the THANKS file, as he also contributed the new milestone interface ITicketGroupStatsProvider (see r4150).


git-svn-id: http://svn.edgewall.org/repos/trac/trunk@5984 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -12,6 +12,7 @@
  * Wesley Crucius                 wcrucius@sandc.com
  * dju'                           
  * Daragh Fitzpatrick             Daragh@i2i-Tech.com
+ * Justin Francis
  * Markus Fuchs                   
  * Eric Gillespie                 epg@netbsd.org
  * Matthew Good                   trac@matt-good.net
