Apply patch from #3833 to improve dynamic reloading of environements when:  * a component is enabled or disabled  * a plugin is installed or uninstalled via the web administration interface  * the logging configuration is changed  * or any other configuration changes
A big thank you to osimons for working out most of the patch!

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6006 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -45,6 +45,7 @@
  * Manuzhai                       manuzhai@gmail.com
  * Armin Ronacher (mitsuhiko)     armin.ronacher@active-4.com
  * Mark Rowe                      mark.rowe@bdash.net.nz
+ * Odd Simon Simonsen             simon-code@bvnetwork.no
  * Olliver Rutherfurd             ollie
  * pkou                           pkou@ua.fm
  * Andres Salomon                 dilinger@athenacr.com
