Convert to utf-8.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6281 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
- * Jonas Borgström <jonas@edgewall.com>
+ * Jonas BorgstrÃ¶m <jonas@edgewall.com>
  * Daniel Lundin <daniel@edgewall.com>
  * Rocky Burt <rocky@carterscove.com>
  * Christopher Lenz <cmlenz@gmx.de>
