I guess now that I have full commit rights I'm also an author.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6282 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/AUTHORS
+++ b/AUTHORS
@@ -11,5 +11,6 @@
  * Tim Hatch <trac@timhatch.com>
  * Eli Carter <retracile@gmail.com>
  * Noah Kantrowitz <kantrn+trac@rpi.edu>
+ * Jeroen Ruigrok van der Werven <asmodai@in-nomine.org>
 
 See also THANKS for people who have contributed to the project.
