Don't use jQuery's $ function at the global level, as this will conflict with other !JavaScript libraries.
Many thanks to Paul Irish for having completed that big task!

Closes #5954.

git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6572 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/THANKS
+++ b/THANKS
@@ -25,6 +25,7 @@
  * Tim Hatch                      trac@timhatch.com
  * Michael Hope                   michael.hope@hamjet.co.nz
  * Richard Hult                   richard@imendio.com
+ * Paul Irish                     paul.irishEWWSPAM@gmail.com
  * Noah Kantrowitz (coderanger)   coderanger@yahoo.com
  * Waldemar Kornewald             wkornew@gmx.net
  * Nuutti Kotivuori               naked@iki.fi
