--- a/THANKS
+++ b/THANKS
@@ -8,6 +8,7 @@
  * Rocky Burt                     rocky.burt@myrealbox.com
  * Toni Brkic                     toni.brkic@switchcore.com
  * Eli Carter                     eli.carter@commprove.com
+ * Michele Cella
  * Felix Colins                   felix@keyghost.com
  * Wesley Crucius                 wcrucius@sandc.com
  * dju'                           
@@ -15,6 +16,7 @@
  * Justin Francis
  * Markus Fuchs                   
  * Eric Gillespie                 epg@netbsd.org
+ * Daniel Kahn Gillmor
  * Matthew Good                   trac@matt-good.net
  * Shun-ichi Goto                 gotoh@taiyo.co.jp
  * Chris Green                    cmgreen@uab.edu
