Add translation strings.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@6999 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/locale/nl_NL/LC_MESSAGES/messages.po
+++ b/trac/locale/nl_NL/LC_MESSAGES/messages.po
@@ -3008,12 +3008,11 @@ msgstr ""
 
 #: trac/web/auth.py:91
 msgid "Logout"
-msgstr ""
+msgstr "Uitloggen"
 
 #: trac/web/auth.py:94
-#, fuzzy
 msgid "Login"
-msgstr "Plugins"
+msgstr "Inloggen"
 
 #: trac/web/chrome.py:154 trac/web/chrome.py:162
 #, python-format
