Clean up on python format variables.
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@7002 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/locale/cs_CZ/LC_MESSAGES/messages.po
+++ b/trac/locale/cs_CZ/LC_MESSAGES/messages.po
@@ -1770,7 +1770,7 @@ msgstr "Zobrazit úplný seznam změn"
 #: trac/ticket/default_workflow.py:253 trac/ticket/default_workflow.py:263
 #, fuzzy, python-format
 msgid "The owner will change to %(name)s"
-msgstr "Zobrazit úplný seznam změn"
+msgstr "Zobrazit úplný seznam změn %(name)s"
 
 #: trac/ticket/default_workflow.py:256
 msgid "to "
