--- a/trac/locale/pt_PT/LC_MESSAGES/messages.po
+++ b/trac/locale/pt_PT/LC_MESSAGES/messages.po
@@ -1677,7 +1677,7 @@ msgstr "Licença:"
 #: trac/ticket/admin.py:87
 #, fuzzy, python-format
 msgid "Component %(name)s already exists."
-msgstr "Componente %s não existe."
+msgstr "Componente %(name)s já existe."
 
 #: trac/ticket/admin.py:95
 msgid "No component selected"
@@ -1695,7 +1695,7 @@ msgstr ""
 #: trac/ticket/admin.py:183
 #, fuzzy, python-format
 msgid "Milestone %(name)s already exists."
-msgstr "Versão %s já existe."
+msgstr "Marco %(name)s já existe."
 
 #: trac/ticket/admin.py:191
 msgid "No milestone selected"
@@ -1704,7 +1704,7 @@ msgstr ""
 #: trac/ticket/admin.py:263
 #, fuzzy, python-format
 msgid "Version %(name)s already exists."
-msgstr "Versão %s já existe."
+msgstr "Versão %(name)s já existe."
 
 #: trac/ticket/admin.py:271
 msgid "No version selected"
