--- a/trac/locale/pt_BR/LC_MESSAGES/messages.po
+++ b/trac/locale/pt_BR/LC_MESSAGES/messages.po
@@ -727,7 +727,7 @@ msgstr ""
 #: trac/db/sqlite_backend.py:159
 #, fuzzy, python-format
 msgid "Database \"%(path)s\" not found."
-msgstr "Página %(name)s não encontrada"
+msgstr ""
 
 #: trac/db/sqlite_backend.py:168
 #, python-format
@@ -1689,7 +1689,7 @@ msgstr ""
 #: trac/ticket/admin.py:87
 #, fuzzy, python-format
 msgid "Component %(name)s already exists."
-msgstr "Componente %s já existe."
+msgstr "Componente %(name)s já existe."
 
 #: trac/ticket/admin.py:95
 msgid "No component selected"
@@ -1706,7 +1706,7 @@ msgstr "Data de Finalização Inválida"
 #: trac/ticket/admin.py:183
 #, fuzzy, python-format
 msgid "Milestone %(name)s already exists."
-msgstr "Marca %s já existe."
+msgstr "Marca %(name)s já existe."
 
 #: trac/ticket/admin.py:191
 msgid "No milestone selected"
@@ -1715,7 +1715,7 @@ msgstr "Nenhuma marca selecionada"
 #: trac/ticket/admin.py:263
 #, fuzzy, python-format
 msgid "Version %(name)s already exists."
-msgstr "Versão %s já existe."
+msgstr "Versão %(name)s já existe."
 
 #: trac/ticket/admin.py:271
 msgid "No version selected"
@@ -1724,7 +1724,7 @@ msgstr "Nenhuma versão selecionada"
 #: trac/ticket/admin.py:343
 #, fuzzy, python-format
 msgid "%(type)s %(name)s already exists"
-msgstr "%s %s já existe"
+msgstr "%(type)s %(name)s já existe"
 
 #: trac/ticket/admin.py:350
 msgid "No enum selected"
@@ -1759,7 +1759,7 @@ msgstr "O dono irá mudar"
 #: trac/ticket/default_workflow.py:253 trac/ticket/default_workflow.py:263
 #, fuzzy, python-format
 msgid "The owner will change to %(name)s"
-msgstr "O dono irá mudar para %s"
+msgstr "O dono irá mudar para %(name)s"
 
 #: trac/ticket/default_workflow.py:256
 msgid "to "
@@ -1768,7 +1768,7 @@ msgstr "para"
 #: trac/ticket/default_workflow.py:275
 #, fuzzy, python-format
 msgid "The resolution will be set to %(name)s"
-msgstr "A solução será mudada para %s"
+msgstr "A solução será mudada para %(name)s"
 
 #: trac/ticket/default_workflow.py:285
 msgid "The resolution will be set"
@@ -1777,7 +1777,7 @@ msgstr ""
 #: trac/ticket/default_workflow.py:290
 #, fuzzy, python-format
 msgid "Next status will be '%(name)s'"
-msgstr "O próximo estado será '%s'"
+msgstr "O próximo estado será '%(name)s'"
 
 #: trac/ticket/model.py:361
 #, python-format
